Correct overflow

--- a/clients/assets/styles/sender.css
+++ b/clients/assets/styles/sender.css
@@ -226,6 +226,7 @@ p {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 .canvas {
